feat: use chi
